# Splix

./: Cargo.toml  README.md
crates/splix/: Cargo.toml
crates/splix/src/: lib.rs
crates/splix_ansi/: Cargo.toml
crates/splix_ansi/src/: ansi_encoder.rs  lib.rs
crates/splix_api/: Cargo.toml  build.rs
crates/splix_api/proto/: splix_api.proto
crates/splix_api/src/: lib.rs  proto.rs
crates/splix_error/: Cargo.toml
crates/splix_error/src/: error.rs
crates/splix_event/: Cargo.toml
crates/splix_event/src/: lib.rs  pane_update_event.rs
crates/splix_id/: Cargo.toml
crates/splix_id/src/: lib.rs  pane_id.rs  session_id.rs  window_id.rs
crates/splix_input/: Cargo.toml
crates/splix_input/src/: input_receiver.rs  lib.rs
crates/splix_io/: Cargo.toml
crates/splix_io/src/: async_file.rs  lib.rs
crates/splix_logger/: Cargo.toml
crates/splix_logger/src/: lib.rs  socket.rs
crates/splix_main/: Cargo.toml
crates/splix_main/src/: main.rs
crates/splix_pane/: Cargo.toml
crates/splix_pane/src/: grid.rs  lib.rs
crates/splix_pty/: Cargo.toml
crates/splix_pty/src/: lib.rs
crates/splix_renderer/: Cargo.toml
crates/splix_renderer/src/: lib.rs
crates/splix_server/: Cargo.toml
crates/splix_server/src/: lib.rs  splix_service.rs
crates/splix_session/: Cargo.toml
crates/splix_session/src/: lib.rs
crates/splix_terminal/: Cargo.toml
crates/splix_terminal/src/: lib.rs  shell_path_resolver.rs
crates/splix_termios/: Cargo.toml
crates/splix_termios/src/: alternate_screen.rs  lib.rs  raw_mode.rs
crates/splix_window/: Cargo.toml
crates/splix_window/src/: lib.rs
