[workspace]
resolver = "2"
default-members = ["crates/splix_main"]
members = [
  "crates/splix",
  "crates/splix_ansi",
  "crates/splix_error",
  "crates/splix_event",
  "crates/splix_id",
  "crates/splix_main",
  "crates/splix_pane",
  "crates/splix_renderer",
  "crates/splix_session",
  "crates/splix_terminal",
  "crates/splix_termios",
  "crates/splix_window",
]
