[workspace]
resolver = "2"
default-members = ["crates/splix_main"]
members = [
  "crates/splix",
  "crates/splix_ansi",
  "crates/splix_api",
  "crates/splix_error",
  "crates/splix_event",
  "crates/splix_id",
  "crates/splix_input",
  "crates/splix_logger",
  "crates/splix_main",
  "crates/splix_pane",
  "crates/splix_renderer",
  "crates/splix_server",
  "crates/splix_session",
  "crates/splix_terminal",
  "crates/splix_termios",
  "crates/splix_window",
]

[workspace.dependencies]
anyhow = "1.0.98"
clap = "4.5.39"
glam = "0.30.3"
nix = "0.30.1"
prost = "0.13.5"
ringbuf = "0.3"               # TODO: Update
tempfile = "3.20.0"
terminal_size = "0.4.2"
thiserror = "2.0.12"
tokio = "1.45.1"
tokio-stream = "0.1.17"
tonic = "0.13.1"
tonic-build = "0.13.1"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
