[package]
name = "splix"
version = "0.1.0"
edition = "2024"

[dependencies]
splix_error = { path = "../splix_error" }
splix_event = { path = "../splix_event" }
splix_id = { path = "../splix_id" }
splix_session = { path = "../splix_session" }
splix_termios = { path = "../splix_termios" }
tokio = { version = "1.45.0", features = ["sync"] }
