[package]
name = "splix"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { workspace = true, features = ["fast-math"] }
splix_error = { path = "../splix_error" }
splix_event = { path = "../splix_event" }
splix_id = { path = "../splix_id" }
splix_input = { path = "../splix_input" }
splix_pane = { path = "../splix_pane" }
splix_renderer = { path = "../splix_renderer" }
splix_server = { path = "../splix_server" }
splix_session = { path = "../splix_session" }
splix_termios = { path = "../splix_termios" }
splix_window = { path = "../splix_window" }
terminal_size = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
