[package]
name = "splix_main"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
splix = { path = "../splix" }
splix_logger = { path = "../splix_logger" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
