[package]
name = "splix_renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "0.30.3", features = ["fast-math"] }
splix_pane = { path = "../splix_pane" }
splix_window = { path = "../splix_window" }

[dev-dependencies]
splix_pane = { path = "../splix_pane" }
splix_window = { path = "../splix_window" }
splix_id = { path = "../splix_id" }
