[package]
name = "splix_session"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
byteorder = "1.5.0"
splix_error = { path = "../splix_error" }
splix_event = { path = "../splix_event" }
splix_id = { path = "../splix_id" }
splix_window = { path = "../splix_window" }
tokio = { version = "1.45.0", features = ["sync"] }
